--- a/frontend/src/styles/randula/home.css
+++ b/frontend/src/styles/randula/home.css
@@ -1,3 +1,19 @@
 .home {
     background-color: rgb(165, 226, 226);
 }
+
+
+.loginMain {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loginContainer {
+    width: 80%;
+    height: 80vh;
+    background-color: #ccc;
+    text-align: center;
+}
