--- a/frontend/src/styles/sudul/orderRequests.css
+++ b/frontend/src/styles/sudul/orderRequests.css
@@ -52,21 +52,31 @@
 }
 .proc-order-requests-table {
     width: 100%;
-    border-collapse: collapse;
+  }
+  .proc-order-requests-table tr{
+    width: 100%;
+    border-bottom: 3px solid #ffffff ;
   }
   
-  .proc-order-requests-table th, .proc-order-requests-table td {
-    border: 1px solid #ccc;
-    padding: 8px;
+  .proc-order-requests-table th,
+  .proc-order-requests-table td{
+    border-right: 2px solid #ffffff;
+    border-left: 2px solid #ffffff;  /* Reduce border thickness for the right border */
     text-align: center;
+    padding: 10px;
   }
-  
+
+
   .proc-order-requests-table th {
     background-color: #f0f0f0;
   }
-  
-  .proc-order-requests-table tbody tr:hover {
-    background-color: #3db52d;
-    cursor: pointer;
+  .proc-order-requests-table tbody td{
+    border-radius: 10px;
   }
-  
+  .proc-order-requests-table tbody tr:hover td{
+    background-color: #0000003f;
+    cursor: pointer;
+    border-bottom: 5px solid #ffffff ;
+    border-right: 2px solid #ffffff;
+    border-radius: 10px;
+  }
