Admin Dash Added

--- a/frontend/src/styles/randula/home.css
+++ b/frontend/src/styles/randula/home.css
@@ -17,3 +17,8 @@
     background-color: #ccc;
     text-align: center;
 }
+
+.userList {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+}
