--- a/frontend/src/styles/sudul/pricing.css
+++ b/frontend/src/styles/sudul/pricing.css
@@ -46,28 +46,35 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  background-color: #1c966f; /* Default button background color */
+  background-color: #1c966f;
+  /* Default button background color */
 }
 
 .pricing-buttons .btn-danger {
-  background-color: #c50c27; /* Button background color on hover */
+  background-color: #c50c27;
+  /* Button background color on hover */
 }
+
 .pricing-buttons button.btn-req {
   background-color: #cb741cef;
 }
+
 .pricing-buttons button.btn-save {
   background-color: rgb(28, 203, 31);
 }
+
 .pricing-buttons button:hover {
   background-color: #dae09a;
   color: #000;
 }
+
 .pricing-order-details-table input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-input{
+
+input {
   border: 1px solid #ccc;
-  text-align: center; 
+  /* text-align: center;  */
 }
