--- a/frontend/src/styles/randula/home.css
+++ b/frontend/src/styles/randula/home.css
@@ -17,3 +17,20 @@
     background-color: #ccc;
     text-align: center;
 }
+
+.homeMain {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.homeContainer {
+    width: 100%;
+    height: 70vh;
+    background-color: #ccc;
+    text-align: center;
+    margin-top: 0px;
+}
