--- a/frontend/src/styles/randula/home.css
+++ b/frontend/src/styles/randula/home.css
@@ -48,8 +48,13 @@
 
 .homeContainer {
     width: 100%;
-    height: 70vh;
+    height: 83vh;
     background-color: #ccc;
     text-align: center;
     margin-top: 0px;
+}
+
+img.carImage {
+    width: 120%;
+    height: 120%;
 }
