--- a/frontend/src/styles/sudul/pricing.css
+++ b/frontend/src/styles/sudul/pricing.css
@@ -1,5 +1,6 @@
 .proc-pricing {
   padding: 20px;
+  font-family: Montserrat;
 }
 
 .proc-pricing-container {
@@ -14,7 +15,9 @@
 
 .pricing-order-details-table th,
 .pricing-order-details-table td {
-  border: 1px solid #ccc;
+  border: 2px solid #ffffff;
+  background-color: rgba(127, 255, 212, 0.486);
+  border-radius: 10px;
   padding: 8px;
   text-align: center;
 }
@@ -31,7 +34,7 @@
 }
 
 .total-and-buttons h4 {
-  margin: 0;
+  margin: 10px;
 }
 
 /* Style for the pricing-buttons container */
@@ -40,32 +43,39 @@
   gap: 10px;
 }
 
+
 .pricing-buttons button {
+  min-width: 200px;
   padding: 10px 20px;
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  background-color: #1c966f;
-  /* Default button background color */
+  
+}
+.pricing-buttons .btn-primary,
+.pricing-buttons .btn-primary:active{
+  background-color: #1a89f8a8;
+  color: #000;
 }
 
 .pricing-buttons .btn-danger {
-  background-color: #c50c27;
-  /* Button background color on hover */
+  background-color: #c50c28;
 }
 
+.pricing-buttons button.btn-req:active,
 .pricing-buttons button.btn-req {
-  background-color: #cb741cef;
-}
-
-.pricing-buttons button.btn-save {
-  background-color: rgb(28, 203, 31);
-}
-
-.pricing-buttons button:hover {
-  background-color: #dae09a;
+  background-color: #eeff00a0;
   color: #000;
+}
+.pricing-buttons button.btn-save:active,
+.pricing-buttons button.btn-save {
+  background-color: rgba(28, 203, 31, 0.623);
+  color: #000;
+}
+
+.pricing-buttons .btn:hover{
+  box-shadow: #250443b3 4px 4px 4px;
 }
 
 .pricing-order-details-table input[type="number"]::-webkit-inner-spin-button,
@@ -75,6 +85,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .pricing-order-details-table input{
-  border: 1px solid #ccc;
+  border: none;
+  background-color: transparent;
   text-align: center; 
 }
