--- a/frontend/src/styles/sudul/supplierCatalogues.css
+++ b/frontend/src/styles/sudul/supplierCatalogues.css
@@ -57,3 +57,32 @@
   border-right: 2px solid #ffffff;
   border-radius: 10px;
 }
+
+.item-table {
+  max-height: 50%;
+  width: 100%;
+  border-collapse: collapse;
+  overflow: scroll;
+}
+
+.item-table th {
+  background-color: #f0f0f0;
+}
+
+.item-table tr{
+  width: 100%;
+  border-bottom: 3px solid #ffffff ;
+}
+
+.item-table th,
+.item-table td{
+  border-right: 2px solid #ffffff;
+  border-left: 2px solid #ffffff;  /* Reduce border thickness for the right border */
+  text-align: center;
+  padding: 10px;
+}
+
+.item-table tbody td{
+  background-color: rgba(217, 124, 58, 0.477);
+  border-radius: 10px;
+}
