--- a/frontend/src/styles/sudul/pricing.css
+++ b/frontend/src/styles/sudul/pricing.css
@@ -1,6 +1,9 @@
 .proc-pricing {
-  padding: 20px;
-  font-family: Montserrat;
+  cursor: default;
+  display: block;
+  padding: 10px;
+  height: 100vh;
+  overflow: scroll;
 }
 
 .proc-pricing-container {
@@ -15,10 +18,11 @@
 
 .pricing-order-details-table th,
 .pricing-order-details-table td {
+  width: fit-content;
   border: 2px solid #ffffff;
   background-color: rgba(127, 255, 212, 0.486);
   border-radius: 10px;
-  padding: 8px;
+  padding: 4px;
   text-align: center;
 }
 
@@ -41,6 +45,7 @@
 .pricing-buttons {
   display: flex;
   gap: 10px;
+  margin-top: 10px;
 }
 
 
@@ -88,4 +93,7 @@ input[type="number"]::-webkit-outer-spin-button {
   border: none;
   background-color: transparent;
   text-align: center; 
+}
+.delivery-notes{
+  width: 100%;
 }
