--- a/frontend/src/styles/sudul/sidebar.css
+++ b/frontend/src/styles/sudul/sidebar.css
@@ -1,18 +1,26 @@
 /* Sidebar container */
 .sidebar {
+  font-family: Montserrat;
     background-color: #010929;
     color: #fff;
     height: 100vh;
     padding: 20px;
-
+    font-weight: 700;
   }
   
   /* Sidebar header */
   .header {
+    font-family: Orbitron;
     text-align: center;
     margin-bottom: 40px;
   }
-  
+  .header h2{
+    margin-bottom: 0px;
+  }
+  .header p{
+    font-size: 14px;
+    color: rgba(95, 158, 160, 0.419);
+  }
   .menu .btn-primary{
     margin-left: 20%;
     text-align: left;
