--- a/frontend/src/styles/randula/home.css
+++ b/frontend/src/styles/randula/home.css
@@ -1,5 +1,5 @@
 .home {
-    background-color: rgb(165, 226, 226);
+    background-color: rgb(145, 183, 245);
 }
 
 
@@ -46,15 +46,15 @@
     width: 100%;
 }
 
-.homeContainer {
+/* .homeContainer {
     width: 100%;
     height: 83vh;
     background-color: #ccc;
     text-align: center;
     margin-top: 0px;
-}
+} */
 
 img.carImage {
-    width: 120%;
+    width: 125%;
     height: 120%;
 }
